# IsaacLab-Laura

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Commands.txt  README.md  Screencast from 2025-08-27 20-10-25.webm  Screencast from 2025-08-29 11-15-52.webm  Screencast from 2025-08-29 11-26-08.webm  Screencast from 2025-08-29 11-34-26.webm  Screencast from 2025-08-29 11-42-57.webm  debug_ci.py  isaaclab.bat  isaaclab.sh  pyproject.toml  regenerate_vial_collision.py
.Trash-1000/info/: ParallelFrankaIkLiftLabware-v0.trashinfo  bc_trans_20250721_1.trashinfo  logs.trashinfo  robomimic.trashinfo  videos.trashinfo
.github/: copilot-instructions.md
.meta/: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  README.md  VERSION  environment.yml  isaaclab.bat
.meta/.aws/: mirror-buildspec.yml  premerge-ci-buildspec.yml
.meta/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.meta/.github/workflows/: docs.yaml  pre-commit.yaml
.meta/depracted/scripts/: consolidated_demo.py  cube_mimic_env.py  lift_labware.py  obj_on_base.py  patch.py  stack_beaker_cube.py  stack_cubes.py  ur10_cfg.py
.meta/docker/: docker-compose.yaml
.meta/docs/: CubeStack.txt  conf.py  env_utils.py
apps/: isaaclab.python.headless.kit  isaaclab.python.headless.rendering.kit  isaaclab.python.kit  isaaclab.python.rendering.kit  isaaclab.python.xr.openxr.headless.kit  isaaclab.python.xr.openxr.kit
docker/: .container.cfg  .env.base  .env.cloudxr-runtime  .env.curobo  .env.harry  .env.ros2  .isaac-lab-docker-history  Dockerfile.base  Dockerfile.curobo  Dockerfile.harry  Dockerfile.ros2  container.py  docker-compose.yaml  x11.yaml
docker/.ros/: fastdds.xml
docs/: CubeStack.txt  annotated_dataset.hdf5  clean_urdf.py  conical_flask.txt  env_utils.py  find_best_checkpoints.py  generated_dataset_split.hdf5  generated_demo_dataset_small_failed.hdf5  macros_private.py  new_simple_dataset.hdf5  obs_nets.py  observations.py  rollout_logger.txt  run_experiments.sh  test.txt  test_demo.hdf5  testlog.txt  varying_beaker_scale_annotated.hdf5  varying_beaker_scale_generated.hdf5  varying_beaker_scale_generated2_split.hdf5  varying_beaker_scale_generated2_split_with_next_obs.hdf5  vialrack_4k.txt  weighing_2k_dataset_cleaned.hdf5
docs/Models/: model_epoch_2000.pth  model_epoch_5000_2.pth
docs/scripts/: bc.py
docs/test_src/: events.py  generated_llm.py  generated_llm_placing.py  lab_env_cfg.py  observations.py  record_demos.py  terminations.py
docs/training_data/: JointSafetyClassifier.pth  annotated_dataset.hdf5  dataset.hdf5  generated_dataset_failed.hdf5  training_data.txt  uncertainties.txt  varying_beaker_scale_generated_1000_split.hdf5  varying_beaker_scale_generated_500_split.hdf5
docs/training_data/20250715152538/: config.json
docs/training_data/20250716100129/: config.json
docs/training_data/pick_place/: uncertainties_pick_place.txt
docs/training_data/s/: config.json
docs/training_data/st/: config.json
ros2/bag_files/rosbag2_2025_09_09-14_33_03/: metadata.yaml
ros2/bag_files/rosbag2_2025_09_09-14_40_38/: metadata.yaml  rosbag2_2025_09_09-14_40_38_0.db3
ros2/bag_files/rosbag2_2025_09_09-14_44_31/: metadata.yaml  rosbag2_2025_09_09-14_44_31_0.db3
ros2/bag_files/stateMachineRecord/: metadata.yaml  stateMachineRecord_0.db3
ros2/custom_message /robot_state_message/: CMakeLists.txt
ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/log/: latest_build
ros2/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2/src/demo/: CMakeLists.txt  package.xml
scripts/benchmarks/: benchmark_rsl_rl.py
scripts/demos/: bipeds.py  h1_locomotion.py  multi_asset.py  quadcopter.py
scripts/demos/sensors/: raycaster_sensor.py
scripts/environments/state_machine/: lift_cube_sm.py  lift_teddy_bear.py  logging.txt  pour_lab_sm.py  stack_lab_sm.py  stack_lab_sm_copy.py  stack_weigh_lab_sm.py  weigh_lab_sm.py  (+1 more)
scripts/tools/: add_next_obs.py  check_demos.py  check_instanceable.py  cleanup_file.py  convert_mesh.py  copy_metadata_hdf5.py  hdf5_splitter.py  record_SM_demos.py  record_annotate_demos_llm_test.py  record_demos.py  record_demos_headless.py  record_demos_llm_test.py  record_demos_llm_test_copy.py  record_demos_llm_test_copy2.py  record_llm_demos.py  remove_demo.py  replay_demos.py  start_discovery_server.sh  test.py
source/isaaclab/: __init__.py  setup.py
source/isaaclab/isaaclab/ros2/src/cpp_srvcli/: CMakeLists.txt  package.xml
source/isaaclab/isaaclab/ros2/src/cpp_srvcli/src/: add_two_ints_server.cpp  last_message_client.cpp  last_message_server.cpp
source/isaaclab/isaaclab/ros2/src/message_server/: CMakeLists.txt  package.xml
source/isaaclab/isaaclab/ros2/src/message_server/src/: message_server.cpp
source/isaaclab_assets/: __init__.py  setup.py
source/isaaclab_mimic/: setup.py
source/isaaclab_rl/: setup.py
source/isaaclab_tasks/: __init__.py  setup.py
source/shazil/: commands.txt
tools/: conftest.py  install_deps.py  run_all_tests.py  test_settings.py
tools/.meta/: .dockerignore  CONTRIBUTORS.md  pyproject.toml
tools/template/: cli.py  generator.py
(+1557 files in other folders)
